Quorum3/Library/Tests/TypeCheckerGenerated/Pass/ImpAssignObjectUndefined.quorum
class Main
    action Main
        Object v = undefined
        Test(v)
    end

    action Test(Object var)
        if var = undefined
            output "passed"
        end
    end
end
