Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignIntegerUndefinedField.quorum
class Main
    Object v = undefined
    action Main
        Test(v)
    end

    action Test(integer var)
    end
end
